httpbin-gateway-v2.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: httpbin
spec:
  hosts:
  - "*"
  gateways:
  - httpbin-gateway
  http:
  - route:
    - destination:
        host: httpbin
        subset: v1
        port:
          number: 8000
      weight: 100
    mirror:
      host: httpbin
      subset: v2
    mirrorPercentage: 
      value: 100.0
